<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2024 Dana Sommerich
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <!-- "app_name" is injected by build.gradle, "release_app_name" is used for release builds -->
    <string name="release_app_name">Auto Mute</string>
    
    <!-- Preferences -->
    
    <!-- General -->
    <string name="pref_general_title">General</string>
    
    <string name="pref_general_enabled_title">Enable Service</string>
    <string name="pref_general_enabled_summary_off">Auto Mute service is not enabled.</string>
    <string name="pref_general_enabled_summary_on">Auto Mute service is enabled.</string>
    
    <string name="pref_general_notifications_title">Notification Settings</string>
    <string name="pref_general_notifications_summary">Disable or hide app notifications.</string>
    
    <!-- Auto Mute -->
    <string name="pref_auto_mute_title">Auto Mute</string>
    
    <string name="pref_auto_mute_enabled_title">After Audio Stops</string>
    <string name="pref_auto_mute_enabled_summary_on">Automatically mute after audio stops playing.</string>
    <string name="pref_auto_mute_enabled_summary_off">Don\'t automatically mute after audio stops playing.</string>
    
    <string name="pref_auto_mute_delay_title">Delay</string>
    <string name="pref_auto_mute_delay_summary" formatted="true">Automatically mute %1$s after audio stops playing.</string>
    <string-array name="pref_auto_mute_delay_entries">
        <item>5 seconds</item>
        <item>15 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>5 minutes</item>
    </string-array>
    <string-array name="pref_auto_mute_delay_values">
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>300</item>
    </string-array>
    
    <string name="pref_auto_mute_show_ui_title">Show Volume Control</string>
    <string name="pref_auto_mute_show_ui_summary_on">Show volume control when muting.</string>
    <string name="pref_auto_mute_show_ui_summary_off">Don\'t show anything when muting.</string>
    
    <string name="pref_auto_mute_headphones_disabled_title">Ignore Headphones</string>
    <string name="pref_auto_mute_headphones_disabled_summary_on">Don\'t automatically mute while headphones are connected.</string>
    <string name="pref_auto_mute_headphones_disabled_summary_off">Automatically mute while headphones are connected.</string>
    
    <string name="pref_auto_mute_headphones_unplugged_title">When Headphones Disconnect</string>
    <string name="pref_auto_mute_headphones_unplugged_summary_on">Automatically mute when headphones disconnect.</string>
    <string name="pref_auto_mute_headphones_unplugged_summary_off">Do nothing when headphones disconnect.</string>
    
    <!-- Auto Unmute -->
    <string name="pref_auto_unmute_title">Auto Unmute</string>
    
    <string name="pref_auto_unmute_music_mode_title">Music</string>
    <string name="pref_auto_unmute_music_mode_summary" formatted="true">%1$s when music starts playing.</string>
    
    <string name="pref_auto_unmute_media_mode_title">Media</string>
    <string name="pref_auto_unmute_media_mode_summary" formatted="true">%1$s when media starts playing.</string>
    
    <string name="pref_auto_unmute_assistant_mode_title">Assistant</string>
    <string name="pref_auto_unmute_assistant_mode_summary" formatted="true">%1$s when assistant speaks.</string>
    
    <string name="pref_auto_unmute_game_mode_title">Game</string>
    <string name="pref_auto_unmute_game_mode_summary" formatted="true">%1$s when a game starts playing audio.</string>
    
    <string-array name="pref_auto_unmute_mode_entries">
        <item>Always auto unmute</item>
        <item>Show volume control</item>
        <item>Never auto unmute</item>
    </string-array>
    <string-array name="pref_auto_unmute_mode_values">
        <item>ALWAYS</item>
        <item>SHOW_UI</item>
        <item>NEVER</item>
    </string-array>
    
    <string name="pref_auto_unmute_default_volume_title">Default Volume</string>
    <string name="pref_auto_unmute_default_volume_summary">Volume to use after muting via system controls.</string>
    
    <string name="pref_auto_unmute_maximum_volume_title">Maximum Volume</string>
    <string name="pref_auto_unmute_maximum_volume_summary">Limit volume when unmuting.</string>
    
    <string name="pref_auto_unmute_headphones_plugged_in_title">When Headphones Connect</string>
    <string name="pref_auto_unmute_headphones_plugged_in_summary_on">Automatically unmute when headphones connect.</string>
    <string name="pref_auto_unmute_headphones_plugged_in_summary_off">Do nothing when headphones connect.</string>
    
    <string name="pref_auto_unmute_show_ui_title">Show Volume Control</string>
    <string name="pref_auto_unmute_show_ui_summary_on">Show volume control when unmuting.</string>
    <string name="pref_auto_unmute_show_ui_summary_off">Don\'t show anything when unmuting.</string>
    
    <!-- About -->
    <string name="pref_about_title">About</string>
    
    <string name="pref_about_project_title">View Project Page</string>
    
    <string name="pref_about_issue_title">Report an Issue</string>
    
    <string name="pref_about_app_version_summary">Version %1$s (%2$s)</string>
    
    <!-- Notifications -->
    
    <!-- Status -->
    <string name="notif_channel_status_name">Status Notification</string>
    
    <plurals name="notif_status_total_streams">
        <item quantity="one">%1$d audio stream playing</item>
        <item quantity="other">%1$d audio streams playing</item>
    </plurals>
    <plurals name="notif_status_total_types">
        <item quantity="one">%1$d type of audio playing</item>
        <item quantity="other">%1$d types of audio playing</item>
    </plurals>
    <plurals name="notif_status_music_count">
        <item quantity="one">%1$d music audio stream playing</item>
        <item quantity="other">%1$d music audio streams playing</item>
    </plurals>
    <plurals name="notif_status_media_count">
        <item quantity="one">%1$d media audio stream playing</item>
        <item quantity="other">%1$d media audio streams playing</item>
    </plurals>
    <plurals name="notif_status_assistant_count">
        <item quantity="one">%1$d assistant audio stream playing</item>
        <item quantity="other">%1$d assistant audio streams playing</item>
    </plurals>
    <plurals name="notif_status_game_count">
        <item quantity="one">%1$d game audio stream playing</item>
        <item quantity="other">%1$d game audio streams playing</item>
    </plurals>
    <plurals name="notif_status_other_count">
        <item quantity="one">%1$d other audio stream playing</item>
        <item quantity="other">%1$d other audio streams playing</item>
    </plurals>
    <string name="notif_status_action_mute">Mute</string>
    <string name="notif_status_action_unmute">Unmute</string>
    <string name="notif_status_action_show">Change Volume</string>
    
    <!-- Quick Settings -->
    
    <!-- Enabled -->
    <string name="qs_tile_enable_label">Auto Mute</string>
    <string name="qs_tile_enable_subtitle_enabled">Enabled</string>
    <string name="qs_tile_enable_subtitle_disabled">Disabled</string>
    <string name="qs_tile_enable_state_enabled">Auto Mute service is enabled</string>
    <string name="qs_tile_enable_state_disabled">Auto Mute service is disabled</string>
</resources>
