<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_general_title">
        <SwitchPreference
            android:defaultValue="true"
            android:key="service_enabled"
            android:summaryOff="@string/pref_general_enabled_summary_off"
            android:summaryOn="@string/pref_general_enabled_summary_on"
            android:title="@string/pref_general_enabled_title" />
        
        <Preference
            android:summary="@string/pref_general_notifications_summary"
            android:title="@string/pref_general_notifications_title">
            <intent android:action="android.settings.APP_NOTIFICATION_SETTINGS">
                <extra
                    android:name="android.provider.extra.APP_PACKAGE"
                    android:value="xyz.sommd.automute" />
            </intent>
        </Preference>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/pref_auto_mute_title">
        <SwitchPreference
            android:defaultValue="true"
            android:key="auto_mute_enabled"
            android:summaryOff="@string/pref_auto_mute_enabled_summary_off"
            android:summaryOn="@string/pref_auto_mute_enabled_summary_on"
            android:title="@string/pref_auto_mute_enabled_title" />
        
        <DropDownPreference
            android:defaultValue="30"
            android:dependency="auto_mute_enabled"
            android:entries="@array/pref_auto_mute_delay_entries"
            android:entryValues="@array/pref_auto_mute_delay_values"
            android:key="auto_mute_delay"
            android:summary="@string/pref_auto_mute_delay_summary"
            android:title="@string/pref_auto_mute_delay_title" />
        
        <SwitchPreference
            android:defaultValue="false"
            android:dependency="auto_mute_enabled"
            android:key="auto_mute_show_ui"
            android:summaryOff="@string/pref_auto_mute_show_ui_summary_off"
            android:summaryOn="@string/pref_auto_mute_show_ui_summary_on"
            android:title="@string/pref_auto_mute_show_ui_title" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/pref_auto_unmute_title">
        <xyz.sommd.automute.utils.FloatSeekBarPreference
            android:defaultValue="50"
            android:key="auto_unmute_default_volume"
            android:max="100"
            android:min="0"
            android:summary="@string/pref_auto_unmute_default_volume_summary"
            android:title="@string/pref_auto_unmute_default_volume_title" />
        
        <SwitchPreference
            android:defaultValue="true"
            android:key="auto_unmute_show_ui"
            android:summaryOff="@string/pref_auto_unmute_show_ui_summary_off"
            android:summaryOn="@string/pref_auto_unmute_show_ui_summary_on"
            android:title="@string/pref_auto_unmute_show_ui_title" />
        
        <DropDownPreference
            android:defaultValue="ALWAYS"
            android:entries="@array/pref_auto_unmute_mode_entries"
            android:entryValues="@array/pref_auto_unmute_mode_values"
            android:key="auto_unmute_music_mode"
            android:summary="@string/pref_auto_unmute_music_mode_summary"
            android:title="@string/pref_auto_unmute_music_mode_title" />
        
        <DropDownPreference
            android:defaultValue="SHOW_UI"
            android:entries="@array/pref_auto_unmute_mode_entries"
            android:entryValues="@array/pref_auto_unmute_mode_values"
            android:key="auto_unmute_media_mode"
            android:summary="@string/pref_auto_unmute_media_mode_summary"
            android:title="@string/pref_auto_unmute_media_mode_title" />
        
        <DropDownPreference
            android:defaultValue="ALWAYS"
            android:entries="@array/pref_auto_unmute_mode_entries"
            android:entryValues="@array/pref_auto_unmute_mode_values"
            android:key="auto_unmute_assistant_mode"
            android:summary="@string/pref_auto_unmute_assistant_mode_summary"
            android:title="@string/pref_auto_unmute_assistant_mode_title" />
        
        <DropDownPreference
            android:defaultValue="NEVER"
            android:entries="@array/pref_auto_unmute_mode_entries"
            android:entryValues="@array/pref_auto_unmute_mode_values"
            android:key="auto_unmute_game_mode"
            android:summary="@string/pref_auto_unmute_game_mode_summary"
            android:title="@string/pref_auto_unmute_game_mode_title" />
    </PreferenceCategory>
</PreferenceScreen>